[gd_scene format=3 uid="uid://blcy7rpis7b3"]

[ext_resource type="Script" uid="uid://bbaphisvl2sqb" path="res://script/drill_player.gd" id="1_1gavp"]
[ext_resource type="Texture2D" uid="uid://n412adkhtt0r" path="res://assets/DrillFinal.png" id="1_fmjyi"]
[ext_resource type="AudioStream" uid="uid://d1ok5cnmccncp" path="res://assets/drill1.mp3" id="2_cqyxk"]
[ext_resource type="Texture2D" uid="uid://cqd24iegyamvi" path="res://image-removebg-preview(4).png" id="3_4s2dt"]
[ext_resource type="AudioStream" uid="uid://6vb2r1u5ll5f" path="res://assets/drill2.mp3" id="3_tlaww"]
[ext_resource type="AudioStream" uid="uid://c2unyepy8ixlk" path="res://assets/drill3.mp3" id="4_iyhxq"]
[ext_resource type="Script" uid="uid://dd15xhifdgyxq" path="res://scenes/ScreenShake.gd" id="4_x1213"]
[ext_resource type="AudioStream" uid="uid://ixipk80u8b70" path="res://assets/Borr.mp3" id="8_tlaww"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_1gavp"]
points = PackedVector2Array(0, 76, 119, -33, -115, -33)

[node name="DrillPlayer" type="CharacterBody2D" unique_id=2080515335]
z_index = 10
scale = Vector2(0.2, 0.2)
script = ExtResource("1_1gavp")
drill_sounds = Array[AudioStream]([ExtResource("2_cqyxk"), ExtResource("3_tlaww"), ExtResource("4_iyhxq")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=842603699]
shape = SubResource("ConvexPolygonShape2D_1gavp")

[node name="DrillSprite" type="Sprite2D" parent="." unique_id=1831840766]
rotation = 3.1415927
texture = ExtResource("1_fmjyi")

[node name="SpinTimer" type="Timer" parent="." unique_id=292897255]
wait_time = 0.1
autostart = true

[node name="changeDirTimer" type="Timer" parent="." unique_id=699373462]

[node name="FredrikBorrman" type="Sprite2D" parent="." unique_id=1456706157]
position = Vector2(10, -124.99999)
scale = Vector2(0.7784552, 0.6549296)
texture = ExtResource("3_4s2dt")

[node name="Camera2D" type="Camera2D" parent="." unique_id=992383565]
scale = Vector2(0.99999994, 0.99999994)
zoom = Vector2(3, 3)
limit_left = 0
limit_top = 0
limit_right = 480
script = ExtResource("4_x1213")

[node name="AudioDrill2" type="AudioStreamPlayer" parent="." unique_id=50959184]
stream = ExtResource("8_tlaww")
volume_db = -7.5
autoplay = true

[node name="AudioDrill" type="AudioStreamPlayer" parent="." unique_id=480510027]
volume_db = -10.0
pitch_scale = 0.5
max_polyphony = 5

[connection signal="timeout" from="SpinTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="changeDirTimer" to="." method="_on_change_dir_timer_timeout"]
